updating links - cra links to github

--- a/compliance-audits-and-sanctions/compliance-audits/penalties-suspensions.html
+++ b/compliance-audits-and-sanctions/compliance-audits/penalties-suspensions.html
@@ -453,7 +453,7 @@ Penalties and suspensions</h1>
 
     
         <p>If you want to find the names of registered charities, <abbr title="registered Canadian amateur athletic association">RCAAA</abbr>s, or registered national arts service organizations that have received a sanction, go to <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyAdvncdSrch">List of charities and certain other qualified <span class="nowrap">donees -</span> advanced search</a>. Then, select either “Penalized” or “Suspended” from the “Sanction” dropdown list.</p>
-<p>If you want to find <abbr title="registered journalism organization">RJO</abbr>s that have received a sanction, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a>.</p>
+<p>If you want to find <abbr title="registered journalism organization">RJO</abbr>s that have received a sanction, go to <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a>.</p>
 
     
 
