--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html
@@ -307,10 +307,10 @@ Foreign charities that have received a gift from His Majesty in right of Canada<
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List of foreign charities that have received a gift from His Majesty in right of Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List of foreign charities that have received a gift from His Majesty in right of Canada</a></li>
 <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html">Application process and criteria</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#receipts">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#books">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#receipts">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#books">Books and records</a></li>
 </ul>
 
     
