--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-low-cost-housing.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-low-cost-housing.html
@@ -308,10 +308,10 @@ Low cost housing corporations for the aged</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List of low-cost housing corporations for the aged registered as qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#criteria">Application process and criteria</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#issuing">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#books">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List of low-cost housing corporations for the aged registered as qualified donees</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#criteria">Application process and criteria</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#issuing">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#books">Books and records</a></li>
 </ul>
 
     
