--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html
@@ -300,8 +300,8 @@ Registered Canadian Amateur Athletic Associations</h1>
 <ul>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a></li>
 <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html">Application process and criteria</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
 </ul>
 
     
