--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-universities.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-universities.html
@@ -300,10 +300,10 @@ Universities outside Canada registered as qualified donees</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">List&nbsp;of&nbsp;universities outside Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">List&nbsp;of&nbsp;universities outside Canada</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc191.html">University outside Canada: applying for qualified donee status</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html#Issuing_official_donation_receipts">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html#Books_and_records">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html#Issuing_official_donation_receipts">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html#Books_and_records">Books and records</a></li>
 </ul>
 
     
