--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donate-wisely-avoid-fraud.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donate-wisely-avoid-fraud.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/giving-charity-information-donors/donate-wisely-avoid-fraud.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/giving-charity-information-donors/donate-wisely-avoid-fraud.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/faire-bienfaisance-renseignements-a-intention-donateurs/comment-puis-faire-facon-judicieuse-tout-evitant-fraude.html"/>
 	
@@ -327,11 +327,11 @@ How to donate wisely and avoid fraud</h1>
     
         <h2>Tips for donating wisely</h2>
 <ul>
-<li><p>use the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a> to confirm that the organization is eligible to issue official donation receipts</p>
+<li><p>use the <a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a> to confirm that the organization is eligible to issue official donation receipts</p>
 </li>
 <li><p>visit the organization’s website to&nbsp;learn about its activities and how it is managed</p>
 </li>
-<li><p>beware of <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donation-tax-shelter-schemes.html">donation schemes</a> that promise a tax receipt for more than you donated</p>
+<li><p>beware of <a href="https://cra-design.github.io/charities/giving-charity-information-donors/donation-tax-shelter-schemes.html">donation schemes</a> that promise a tax receipt for more than you donated</p>
 </li>
 <li><p>write cheques to the charity, not to an individual</p>
 </li>
