--- a/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html
+++ b/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/giving-charity-information-donors/donating-help-victims-a-disaster-other-emergency.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/faire-bienfaisance-renseignements-a-intention-donateurs/faire-venir-aide-victimes-catastrophe-autre-situation-urgence.html"/>
 	
@@ -308,7 +308,7 @@ Donating to help victims of a disaster or other emergency</h1>
     
         <h2>Donations made to foreign charities</h2>
 <p>Donations made to foreign charities are not typically eligible for a charitable donation tax credit or deduction; however, there are some exceptions.&nbsp;</p>
-<p>A foreign charity that has received a gift from His Majesty in right of Canada (the Government of Canada) and is registered by the <abbr title="Canada Revenue Agency">CRA</abbr> may become a qualified donee if it meets certain criteria. To find out which foreign charities can currently issue donation receipts, as well as the time period for which they may do so, consult the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html#current">List of currently registered foreign charities</a>.</p>
+<p>A foreign charity that has received a gift from His Majesty in right of Canada (the Government of Canada) and is registered by the <abbr title="Canada Revenue Agency">CRA</abbr> may become a qualified donee if it meets certain criteria. To find out which foreign charities can currently issue donation receipts, as well as the time period for which they may do so, consult the <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html#current">List of currently registered foreign charities</a>.</p>
 <p>For more information about gifts to U.S. charities, go to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/p113.html">P113, Gifts and Income Tax</a>.</p>
 
     
