--- a/guidance-videos-forms/guidance-videos-forms.html
+++ b/guidance-videos-forms/guidance-videos-forms.html
@@ -482,7 +482,7 @@ Guidance products, videos, forms and more</h1>
         		
 <section class="gc-drmt">
 	<h3 data-emptyText="Enter heading" class="h5">
-		<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/other-government-resources-donors.html">Other government resources for donors</a>
+		<a href="https://cra-design.github.io/charities/giving-charity-information-donors/other-government-resources-donors.html">Other government resources for donors</a>
 	</h3>
 	
 	
