--- a/guidance-videos-forms/other-government-resources-donors.html
+++ b/guidance-videos-forms/other-government-resources-donors.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/other-government-resources-donors.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/other-government-resources-donors.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/giving-charity-information-donors/other-government-resources-donors.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/giving-charity-information-donors/other-government-resources-donors.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/faire-bienfaisance-renseignements-a-intention-donateurs/autres-ressources-gouvernementales-donateurs.html"/>
 	
