--- a/information-about-a-charity.html
+++ b/information-about-a-charity.html
@@ -287,7 +287,7 @@ How to get information about a charity</h1>
  <li><a href="#srch">search for a charity in the List of charities</a></li> 
  <li><a href="#nfrml">make an informal information request</a></li> 
  <li><a href="#frml">make a formal access to information request</a></li> 
-</ul>  <p>To get information about registered Canadian amateur athletic associations and other qualified donees, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a>.</p>  
+</ul>  <p>To get information about registered Canadian amateur athletic associations and other qualified donees, go to <a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a>.</p>  
     
 
 
