--- a/operating-a-registered-charity/charities-giving-glossary.html
+++ b/operating-a-registered-charity/charities-giving-glossary.html
@@ -563,7 +563,7 @@ Charities and giving glossary</h1>
 <li>His Majesty in right of Canada,&nbsp;a province, or a territory</li>
 <li>the United Nations and its agencies</li>
 </ul>
-<p>For lists of other qualified donees, go to&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts (qualified donees)</a>.</p>
+<p>For lists of other qualified donees, go to&nbsp;<a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts (qualified donees)</a>.</p>
 </dd></div>
 <div id="RCAAA"><dt id="r">RCAAA</dt> <dd><p>RCAAA stands for registered Canadian amateur athletic association. To be registered as a Canadian amateur athletic association, the applicant must be created and resident in Canada and have the promotion of amateur athletics in Canada on a&nbsp;<strong>nation-wide</strong>&nbsp;basis as its exclusive purpose and exclusive function.&nbsp;It must also devote all its resources to that purpose and function.</p>
 </dd></div>
