--- a/operating-a-registered-charity/issuing-receipts.html
+++ b/operating-a-registered-charity/issuing-receipts.html
@@ -309,7 +309,7 @@ Issuing receipts</h1>
     
         <h2>Topics</h2>
 <ul class="list-group">
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">Which organizations can issue official donation receipts?</a></li>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">Which organizations can issue official donation receipts?</a></li>
 <li class="list-group-item"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html">Does a registered charity have to issue official donation receipts for gifts it receives?</a></li>
 <li class="list-group-item"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/what-you-need-know-issue-official-donation-receipt.html">What you need to know to issue an official donation receipt</a></li>
 <li class="list-group-item"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/determining-fair-market-value-gifts-kind-non-cash-gifts.html">Determining fair market value of non-cash gifts</a></li>
