--- a/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html
+++ b/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html
@@ -376,7 +376,7 @@ Questions and answers about operating a registered charity</h1>
  <details>
   <summary class="text-primary">How can a charity find out if an organization is registered before gifting to it?</summary> 
   <div class="well well-sm panel"> 
-   <p>Search the&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities&nbsp;and other qualified donees</a>&nbsp;or <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p> 
+   <p>Search the&nbsp;<a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities&nbsp;and other qualified donees</a>&nbsp;or <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p> 
   </div> 
  </details> 
 </section>
