--- a/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities/list-municipalities-yukon.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities/list-municipalities-yukon.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/listes-autres-donataires-reconnus/liste-municipalites-yukon.html"/>
 	
