--- a/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities/municipalities.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities/municipalities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/municipalites.html"/>
 	
@@ -301,19 +301,19 @@ Municipalities</h1>
     
         <h2><span id="List" title="List"> </span>List</h2>
  <p>The Canada Revenue Agency (<abbr title="Canada Revenue Agency">CRA</abbr>) maintains a list of municipalities that&nbsp;shows their&nbsp;qualified donee status.</p>  <p>To find a municipality, select one of the following provinces or territories:</p>  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-alberta.html">Alberta</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-british-columbia.html">British Columbia</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-manitoba.html">Manitoba</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-new-brunswick.html">New Brunswick</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-newfoundland-labrador.html">Newfoundland and Labrador</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-northwest-territories.html">Northwest Territories</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-nova-scotia.html">Nova Scotia</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-nunavut.html">Nunavut</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-ontario.html">Ontario</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-prince-edward-island.html">Prince Edward Island</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-quebec.html">Quebec</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-saskatchewan.html">Saskatchewan</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html">Yukon</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-alberta.html">Alberta</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-british-columbia.html">British Columbia</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-manitoba.html">Manitoba</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-new-brunswick.html">New Brunswick</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-newfoundland-labrador.html">Newfoundland and Labrador</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-northwest-territories.html">Northwest Territories</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-nova-scotia.html">Nova Scotia</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-nunavut.html">Nunavut</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-ontario.html">Ontario</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-prince-edward-island.html">Prince Edward Island</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-quebec.html">Quebec</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-saskatchewan.html">Saskatchewan</a></li> 
+ <li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-yukon.html">Yukon</a></li> 
 </ul>  
     
 
