--- a/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada/prescribed-universities-outside-canada.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada/prescribed-universities-outside-canada.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/prescribed-universities-outside-canada.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/universites-situees-a-etranger-visees-reglement.html"/>
 	
@@ -300,7 +300,7 @@ Registered universities outside Canada</h1>
 
     
         <h2><span title="List" id="List"> </span>List</h2>
-<p>The Canada Revenue Agency (<abbr title="Canada Revenue Agency ">CRA</abbr>) maintains a&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">list&nbsp;of registered universities outside Canada</a>&nbsp;that shows their qualified donee status.&nbsp;</p>
+<p>The Canada Revenue Agency (<abbr title="Canada Revenue Agency ">CRA</abbr>) maintains a&nbsp;<a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">list&nbsp;of registered universities outside Canada</a>&nbsp;that shows their qualified donee status.&nbsp;</p>
 
     
 
