--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/advantages-obligations-becoming-oqd.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/advantages-obligations-becoming-oqd.html
@@ -487,7 +487,7 @@ Advantages and obligations of applying for qualified donee status</h1>
     
         <h2>Related topics&nbsp;</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees.html">Compliance for&nbsp;qualified donees</a></li>
 <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></li>
 <li><a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html">Penalties and suspensions</a></li>
