--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/charitable-activities-outside-canada.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/charitable-activities-outside-canada.html
@@ -344,7 +344,7 @@ Activities outside Canada</h1>
 
     
         <p><strong>Note</strong><br>
-There are some foreign organizations that <strong>are </strong>qualified donees. For more information about these organizations, go to <a href="https://cra-design.github.io/charities/policies-guidance/qualified-donee-foreign-charities-that-have-received-a-gift-majesty-right-canada-guidance.html">Guidance CG-023, Qualified donee: Foreign charities that have received a gift from His Majesty in right of Canada</a> or go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List of registered foreign charitable organizations that have received a gift from His Majesty in right of Canada</a>.</p>
+There are some foreign organizations that <strong>are </strong>qualified donees. For more information about these organizations, go to <a href="https://cra-design.github.io/charities/policies-guidance/qualified-donee-foreign-charities-that-have-received-a-gift-majesty-right-canada-guidance.html">Guidance CG-023, Qualified donee: Foreign charities that have received a gift from His Majesty in right of Canada</a> or go to <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List of registered foreign charitable organizations that have received a gift from His Majesty in right of Canada</a>.</p>
 
     
 
