--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/deciding.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/deciding.html
@@ -280,7 +280,7 @@ Make an informed decision about becoming a registered charity</h1>
 <li class="list-unstyled">Interactive tool to help you decide if applying for registration is right for you</li>
 </ul>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"><strong>Differences between a registered charity and a non-profit organization</strong></a></li>
+<li><a href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"><strong>Differences between a registered charity and a non-profit organization</strong></a></li>
 <li class="list-unstyled">Definitions and examples of the differences between registered charities and non-profit organizations</li>
 </ul>
 <ul>
