--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipal-public-body.html
@@ -280,7 +280,7 @@ Applying for status as a municipal or public body performing a function of gover
 <p>Charities Directorate<br>
 Canada Revenue Agency<br>
 Ottawa ON &nbsp;K1A 0L5</p>
-<p>For detailed information about the criteria used by the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> to determine whether an entity qualifies as a municipal or public body performing a function of government and the supporting documentation that must be submitted, go to&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/qualified-donee-municipal-public-body-performing-a-function-government-canada.html">Qualified Donee – Municipal or Public Body Performing a Function of Government in Canada</a>.</p>
+<p>For detailed information about the criteria used by the&nbsp;<abbr title="Canada Revenue Agency">CRA</abbr> to determine whether an entity qualifies as a municipal or public body performing a function of government and the supporting documentation that must be submitted, go to&nbsp;<a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/qualified-donee-municipal-public-body-performing-a-function-government-canada.html">Qualified Donee – Municipal or Public Body Performing a Function of Government in Canada</a>.</p>
 <p>In addition, the letter should be signed by at least one of the applicant's officials and also be accompanied by:</p>
 <ul>
 <li>a complete list of the applicant's current officials</li>
@@ -298,9 +298,9 @@ Ottawa ON &nbsp;K1A 0L5</p>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipal-public-bodies-performing-a-function-government-canada-registered-qualified-donees.html">List</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#issuing">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#books_records">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipal-public-bodies-performing-a-function-government-canada-registered-qualified-donees.html">List</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#issuing">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#books_records">Books and records</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html">Suspension,&nbsp;revocation and objections</a></li>
 </ul>
 
