--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-municipality.html
@@ -287,9 +287,9 @@ The Canada Revenue Agency (CRA) maintains a list of municipalities that&nbsp;sho
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/municipalities.html">List</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#Issuing_official_donation_receipts">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#bks">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/municipalities.html">List</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#Issuing_official_donation_receipts">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipalities.html#bks">Books and records</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipalities.html">Suspension, revocation and objections</a></li>
 </ul>
 
