--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-canadian-amateur-athletic-association.html
@@ -321,8 +321,8 @@ Applying to become a registered Canadian amateur athletic association</h1>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html"><abbr title="Canada Revenue Agency">CRA</abbr> login services</a></li>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-rcaaa.html">Sanctions and objections</a></li>
 </ul>
 
