--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/her-majesty-united-nations-qualified-donee-status.html
@@ -277,7 +277,7 @@ His Majesty in right of Canada, a province, or a territory, the United Nations a
         <p>His Majesty in right of Canada, a province, or a territory, and the United Nations and its agencies are qualified donees. These qualified donees do not have to be included on a list maintained by the Canada Revenue Agency to be recognized as such nor do they have an application process.</p>
 <h2>Related links&nbsp;</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/majesty-right-canada-a-province-a-territory-united-nations-agencies.html">Issuing official donation receipts</a>　</li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/majesty-right-canada-a-province-a-territory-united-nations-agencies.html">Issuing official donation receipts</a>　</li>
 </ul>
 <h2>References&nbsp;</h2>
 <ul>
