--- a/revoking-registered-status/consequences-revocation.html
+++ b/revoking-registered-status/consequences-revocation.html
@@ -287,7 +287,7 @@ Consequences of revocation</h1>
 <ul>
 <li>cannot issue official donation receipts</li>
 <li>do not qualify for exemption from income tax as a registered charity&nbsp;&nbsp;</li>
-<li>will have your name and the reason for revocation published in the <a href="http://canadagazette.gc.ca/rp-pr/publications-eng.html#a1">Canada Gazette</a> and in the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities-listings.html">List of charities </a></li>
+<li>will have your name and the reason for revocation published in the <a href="http://canadagazette.gc.ca/rp-pr/publications-eng.html#a1">Canada Gazette</a> and in the <a href="https://cra-design.github.io/charities/charities-listings.html">List of charities </a></li>
 <li>must transfer all your remaining assets to an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon">eligible donee</a> or pay <a href="https://cra-design.github.io/charities/revoking-registered-status/revocation-tax-t2046-tax-return.html">revocation tax</a></li>
 <li>will not be a charity for <a href="https://cra-design.github.io/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST</a> purposes which could affect:<ul>
 <li>the tax status of your supplies</li>
