--- a/whats-new.html
+++ b/whats-new.html
@@ -495,7 +495,7 @@ The <a href="https://cra-design.github.io/charities/guidance-videos-forms/techni
 <li><a href="https://www.canada.ca/en/revenue-agency/news/newsroom/tax-tips/tax-tips-2025/clarifying-cra-approach-administering-proposed-tax-measure-extend-2024-charitable-donations-deadline.html">Clarifying the CRA’s approach in administering the proposed tax measure to extend the 2024 charitable donations deadline</a></li>
 <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts.html">Issuing receipts</a></li>
 <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html">Does a registered charity have to issue official donation receipts for gifts it receives?</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts (qualified donees)</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts (qualified donees)</a></li>
 <li><a href="https://cra-design.github.io/charities/checklists-charities/keeping-adequate-books-records.html">Checklist - Keeping adequate books and records</a></li>
 </ul>
 
@@ -659,7 +659,7 @@ The <a href="https://cra-design.github.io/charities/guidance-videos-forms/techni
                     <p>Did you know that questions related to receipting are some of the most common telephone enquiries that we receive? In addition, improperly issuing donation receipts is a common issue we see when conducting audits.</p>
                     <p>Your charity can use the resources listed here to learn more or to help fix common and avoidable mistakes you may encounter when issuing donation receipts:</p>
                     <ul>
-                        <li>Only registered charities or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees.html">other qualified donees</a> may issue receipts.</li>
+                        <li>Only registered charities or <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html">other qualified donees</a> may issue receipts.</li>
                         <li>Receipts must contain <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/what-information-must-on-official-donation-receipt-a-registered-charity.html">certain information</a> to meet the requirements of the Income Tax Act and its regulations.</li>
                         <li>For examples of receipts and definitions of terms used, see <a href="https://cra-design.github.io/charities/sample-official-donation-receipts.html">Sample official donation receipts</a>. You can use these samples to prepare official donation receipts in order to remain compliant with the requirements of the Income Tax Act and its regulations.</li>
                         <li>You can also use the <a href="https://cra-design.github.io/charities/checklists-charities/issuing-complete-accurate-donation-receipts.html">checklist for issuing complete and accurate donation receipts</a> to make sure the donation receipts issued by your charity contain the mandatory elements.</li>
@@ -719,7 +719,7 @@ The <a href="https://cra-design.github.io/charities/guidance-videos-forms/techni
                         <li>Make sure <a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">your contact details are up to date</a></li>
                         <li><a href="https://www.canada.ca/en/revenue-agency/corporate/scams-fraud/protect-account.html">Protect your MyBA account - Scams and fraud</a></li>
                         <li>Know how to <a href="https://www.canada.ca/en/revenue-agency/corporate/scams-fraud/recognize-scam.html">recognize a potential case of fraud</a></li>
-                        <li>Learn about <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donate-wisely-avoid-fraud.html">how to donate wisely and avoid fraud</a></li>
+                        <li>Learn about <a href="https://cra-design.github.io/charities/giving-charity-information-donors/donate-wisely-avoid-fraud.html">how to donate wisely and avoid fraud</a></li>
                     </ul>
                     <h3>Reporting suspected fraud</h3>
                     <p>If you suspect a business, charity, or person is cheating in Canada, such as charities making profits from non-charitable activities, report them to the CRA by <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/suspected-tax-cheating-in-canada-overview.html">submitting a lead</a> to the Leads Program. The information you provide in your lead could help the actions the CRA is already taking to fight tax cheating.</p>
@@ -746,7 +746,7 @@ The <a href="https://cra-design.github.io/charities/guidance-videos-forms/techni
                     <h3>Making a donation</h3>
                     <p>When you support registered charities, you help make a positive impact on the daily lives of all Canadians, including your own.</p>
                     <p>Before you contribute, it’s important to choose the right organization. Check the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a> so that you can be confident that the charity you have chosen is registered.</p>
-                    <p>For more information on donations and gifts and how to donate wisely, visit <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors.html">Giving to charity</a>.</p>
+                    <p>For more information on donations and gifts and how to donate wisely, visit <a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a>.</p>
                     <h3>We’re here to help</h3>
                     <p>For questions concerning fundraising and other acceptable activities, please call the Charities Directorate client service team at <span class="nowrap">1-800-267-2384</span>. Our representatives are available to help you Monday through Friday, from <span class="nowrap">8 am to 5 pm</span>, Eastern time.</p>
                 </details><p class="mrgn-bttm-md text-muted text-right small">Published on: November 19, 2024</p>
@@ -987,7 +987,7 @@ The <a href="https://cra-design.github.io/charities/guidance-videos-forms/techni
                     <ul>
                         <li>providing a webinar on <a href="https://www.canada.ca/en/revenue-agency/news/cra-multimedia-library/charities-video-gallery/webinar-books-records.html">Books and records</a> to more than 640 participants</li>
                         <li>publishing an announcement on the <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/corporate-reports-information/advisory-committee-charitable-sector.html">ACCS open call for membership applications</a></li>
-                        <li>refreshing our <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors.html">Giving to charity</a> content, which focuses on information for donors</li>
+                        <li>refreshing our <a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a> content, which focuses on information for donors</li>
                         <li>publishing new web pages aimed at <a href="https://cra-design.github.io/charities/educating-charities-terrorist-abuse.html">educating charities about the risks of terrorist abuse</a></li>
                         <li>publishing updated statistics and refreshed content on <a href="https://cra-design.github.io/charities/compliance-audits/we-promote-compliance.html">Compliance within the charitable sector</a></li>
                         <li>publishing the <a href="https://cra-design.github.io/charities/about-charities-directorate/report-on-charities-program/report-on-charities-program-2022-2023.html">Report on the Charities Program 2022-2023</a></li>
