--- a/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html
+++ b/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-municipal-public-bodies.html
@@ -308,10 +308,10 @@ Municipal or public bodies performing a function of government in Canada</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipal-public-bodies-performing-a-function-government-canada-registered-qualified-donees.html">List of municipal or public bodies performing a function of government in Canada registered as qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#application">Application process and criteria</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#issuing">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#books_records">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipal-public-bodies-performing-a-function-government-canada-registered-qualified-donees.html">List of municipal or public bodies performing a function of government in Canada registered as qualified donees</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#application">Application process and criteria</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#issuing">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/municipal-public-bodies-performing-a-function-government-canada.html#books_records">Books and records</a></li>
 </ul>
 
     
