--- a/giving-charity-information-donors/donation-tax-shelter-schemes.html
+++ b/giving-charity-information-donors/donation-tax-shelter-schemes.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donation-tax-shelter-schemes.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/giving-charity-information-donors/donation-tax-shelter-schemes.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/giving-charity-information-donors/donation-tax-shelter-schemes.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/giving-charity-information-donors/donation-tax-shelter-schemes.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/faire-bienfaisance-renseignements-a-intention-donateurs/stratagemes-relatifs-a-dons-utilises-comme-abris-fiscaux.html"/>
 	
