--- a/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged/low-cost-housing-corporations-aged.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged/low-cost-housing-corporations-aged.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/societes-habitation-fournissant-logements-a-loyer-modique-personnes-agees.html"/>
 	
@@ -286,12 +286,12 @@ Low-cost housing corporations for the aged</h1>
         <p>As a result of changes to the Income Tax Act that came into force on January 1, 2012, a low-cost housing corporation for the aged [within the meaning of paragraph 149(1)(i)] that wants to become a qualified donee must apply for registration and be included on a publicly available list maintained by the Canada Revenue Agency (<abbr title="Canada Revenue Agency">CRA</abbr>). If it is registered as a qualified donee it can issue official donation receipts and registered charities can make gifts to it.</p>
 <p>The following links include the list of low-cost housing corporations for the aged that are registered as qualified donees. They also provide information about how to apply for registration and the obligations of qualified donees under the Act.</p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List</a></li>
 <li><a href="#issuing">Issuing official donation receipts</a></li>
 <li><a href="#books">Books and records</a></li>
 </ul>
 <p>For background information about these requirements, go to <a href="https://www.budget.canada.ca/2011/plan/anx3a-eng.html#toc20">Enhancing the regulatory regime for qualified donees</a>.</p>
-<p>For information on the interim measures put in place while the application process was being developed (prior to <span class="nowrap">January 1, 2014</span>), go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/interim-measures.html">Interim measures</a>.</p>
+<p>For information on the interim measures put in place while the application process was being developed (prior to <span class="nowrap">January 1, 2014</span>), go to <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/interim-measures.html">Interim measures</a>.</p>
 
     
 
