--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
@@ -320,7 +320,7 @@ Ottawa ON&nbsp; K1A 0L5</p>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/campaigns/support-canadian-journalism.html">Supporting Canadian journalism</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/business-tax-credits/qualified-canadian-journalism-organization.html">Qualified Canadian journalism organization</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/objections-appeals-registered-charities-registered-canadian-amateur-athletic-associations-rcaaas-other-listed-qualified-donees.html">Objections and appeals</a></li>
