--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/compliance-registered-journalism-organizations.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/compliance-registered-journalism-organizations.html
@@ -346,8 +346,8 @@ Compliance for registered journalism organizations</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html">Registered journalism organizations</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a></li>
 <li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-registered-journalism-organization.html">Applying to become a registered journalism organization</a></li>
 <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records.html">Keeping records</a></li>
