--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/registered-journalism-organizations.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/registered-journalism-organizations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/organisations-journalistiques-enregistrees.html"/>
 	
@@ -299,7 +299,7 @@ Registered journalism organizations</h1>
         		
 <section class="gc-drmt">
 	<h3 data-emptyText="Enter heading" class="h5">
-		<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a>
+		<a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-registered-journalism-organizations.html">List of registered journalism organizations</a>
 	</h3>
 	
 	
