--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/a-propos-organismes-bienfaisance-enregistres/quelle-est-difference-entre-organisme-bienfaisance-enregistre-organisme-sans-lucratif.html"/>
 	
