--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-foreign-charity.html
@@ -291,9 +291,9 @@ Applying for status as a foreign charity that has received a gift from His Majes
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#receipts">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#books">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-foreign-charities-that-have-received-a-gift-majesty-right-canada.html">List</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#receipts">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/foreign-charities-that-have-received-a-gift-majesty-right-canada.html#books">Books and records</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-foreign-charities.html">Suspension,&nbsp;revocation, judicial review and&nbsp;objections</a>&nbsp;</li>
 </ul>
 
