--- a/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-low-cost-housing-corporation-for-aged.html
+++ b/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status/applying-low-cost-housing-corporation-for-aged.html
@@ -288,9 +288,9 @@ Applying for status as a low-cost housing corporation for the aged</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List of low-cost housing corporations for the aged registered as qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#issuing">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#books">Books and records</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-low-cost-housing-corporations-aged-registered-qualified-donees.html">List of low-cost housing corporations for the aged registered as qualified donees</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#issuing">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/low-cost-housing-corporations-aged.html#books">Books and records</a></li>
 <li><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions/compliance-other-qualified-donees/sanctions-low-cost-housing.html">Suspension, revocation&nbsp;and objections</a>&nbsp;</li>
 </ul>
 
